@@ -38,6 +38,7 @@
 	all : only allow "using" on Dynamic if first parameter is Dynamic
 	php : haxe.Http now supports Https connections when OpenSSL extension is enabled (issue 143)
 	php : fixed enum constructors sequence (issue 142)
+	php : added error message when using 2 fields with different cases in the same class/enum
 	
 2010-01-09: 2.05
 	js : added js.Scroll
